--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         let allData = [];
 
         // Load JSON Data
-        fetch('Data.json')
+        fetch('data.json')
           .then(response => response.json())
           .then(json => {
               allData = json;
@@ -237,3 +237,4 @@
     </script>
 </body>
 </html>
+
