--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         fetch('data.json')
           .then(response => response.json())
           .then(json => {
-              allData = json;
+              alldata = json;
           })
           .catch(error => {
               console.error('Error loading JSON:', error);
@@ -237,4 +237,5 @@
     </script>
 </body>
 </html>
+
 
