--- a/index.html
+++ b/index.html
@@ -15,136 +15,32 @@
             padding: 0;
             line-height: 1.6;
         }
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 30px;
-            background-color: #ffffff;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-        }
-        header {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .logo-container {
-            margin: 0 auto 20px;
-            width: 150px;
-            height: 150px;
-            overflow: hidden;
-            border-radius: 50%;
-            background-color: #eee;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .logo-container img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-        h1 {
-            color: #2c3e50;
-            font-weight: 700;
-            font-size: 1.8em;
-            border-bottom: 3px solid #4CAF50;
-            padding-bottom: 10px;
-        }
-        .disclaimer {
-            background-color: #ffcccc;
-            color: #cc0000;
-            padding: 15px;
-            border-radius: 8px;
-            margin-bottom: 30px;
-            font-size: 1.1em;
-            border: 2px solid #cc0000;
-            text-align: center;
-        }
-        .disclaimer strong {
-            display: block;
-            font-size: 1.3em;
-            margin-bottom: 5px;
-        }
-        .search-section {
-            padding: 20px;
-            background-color: #ecf0f1;
-            border-radius: 8px;
-            margin-bottom: 30px;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .search-section label {
-            min-width: 180px;
-            font-size: 1.1em;
-            color: #34495e;
-            font-weight: bold;
-        }
-        .search-input {
-            flex-grow: 1;
-            padding: 12px;
-            border: 2px solid #bdc3c7;
-            border-radius: 6px;
-            font-size: 1.1em;
-            font-family: Arial, sans-serif;
-            text-align: left;
-            direction: ltr;
-        }
-        .search-button {
-            min-width: 120px;
-            padding: 12px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 6px;
-            cursor: pointer;
-            font-size: 1.1em;
-            transition: background-color 0.3s;
-            font-family: 'Noto Nastaliq Urdu', serif;
-        }
-        .search-button:hover {
-            background-color: #45a049;
-        }
-        .results-section {
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 20px;
-            background-color: #f9f9f9;
-        }
-        .results-heading {
-            font-size: 1.4em;
-            color: #2c3e50;
-            margin-top: 0;
-            margin-bottom: 15px;
-        }
-        .result-table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 15px;
-        }
-        .result-table th, .result-table td {
-            border: 1px solid #dddddd;
-            padding: 12px;
-            text-align: right;
-            font-size: 1em;
-            color: #34495e;
-        }
-        .result-table th {
-            background-color: #4CAF50;
-            color: white;
-            font-weight: 700;
-        }
-        .result-table tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-        .hidden {
-            display: none;
-        }
+        .container { max-width: 900px; margin: 40px auto; padding: 30px; background-color: #ffffff; border-radius: 12px; box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); }
+        header { text-align: center; margin-bottom: 30px; }
+        .logo-container { margin: 0 auto 20px; width: 150px; height: 150px; overflow: hidden; border-radius: 50%; background-color: #eee; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        .logo-container img { width: 100%; height: 100%; object-fit: cover; }
+        h1 { color: #2c3e50; font-weight: 700; font-size: 1.8em; border-bottom: 3px solid #4CAF50; padding-bottom: 10px; }
+        .disclaimer { background-color: #ffcccc; color: #cc0000; padding: 15px; border-radius: 8px; margin-bottom: 30px; font-size: 1.1em; border: 2px solid #cc0000; text-align: center; }
+        .disclaimer strong { display: block; font-size: 1.3em; margin-bottom: 5px; }
+        .search-section { padding: 20px; background-color: #ecf0f1; border-radius: 8px; margin-bottom: 30px; display: flex; align-items: center; gap: 10px; }
+        .search-section label { min-width: 180px; font-size: 1.1em; color: #34495e; font-weight: bold; }
+        .search-input { flex-grow: 1; padding: 12px; border: 2px solid #bdc3c7; border-radius: 6px; font-size: 1.1em; font-family: Arial, sans-serif; text-align: left; direction: ltr; }
+        .search-button { min-width: 120px; padding: 12px; background-color: #4CAF50; color: white; border: none; border-radius: 6px; cursor: pointer; font-size: 1.1em; transition: background-color 0.3s; font-family: 'Noto Nastaliq Urdu', serif; }
+        .search-button:hover { background-color: #45a049; }
+        .results-section { border: 1px solid #ddd; border-radius: 8px; padding: 20px; background-color: #f9f9f9; }
+        .results-heading { font-size: 1.4em; color: #2c3e50; margin-top: 0; margin-bottom: 15px; }
+        .result-table { width: 100%; border-collapse: collapse; margin-top: 15px; }
+        .result-table th, .result-table td { border: 1px solid #dddddd; padding: 12px; text-align: right; font-size: 1em; color: #34495e; }
+        .result-table th { background-color: #4CAF50; color: white; font-weight: 700; }
+        .result-table tr:nth-child(even) { background-color: #f2f2f2; }
+        .hidden { display: none; }
     </style>
 </head>
 <body>
     <div class="container">
         <header>
             <div class="logo-container">
-                <img src="Logo.png" alt="Relief Organization Logo">
+                <img src="Logo.png" alt="Logo">
             </div>
             <h1>ضلع بونیر کے سیلاب متاثرین میں فوڈ اسٹیمپ امداد کی تقسیم کا مکمل ریکارڈ</h1>
         </header>
@@ -153,14 +49,14 @@
             <form id="searchForm">
                 <div class="search-section">
                     <label for="cnic">شناختی کارڈ نمبر (CNIC) درج کریں:</label>
-                    <input type="text" id="cnic" name="cnic" class="search-input" placeholder="مثال: 15101-1182164-0 یا 1510111821640" required>
+                    <input type="text" id="cnic" class="search-input" placeholder="مثال: 15101-1182164-0 یا 1510111821640" required>
                     <button type="submit" class="search-button">تلاش کریں</button>
                 </div>
             </form>
 
             <div class="disclaimer">
                 <strong>آگاہ رہیے</strong>
-                یہ ویب پیج صرف ضلع بونیر کے رہائشی افراد کی سہولت کے لیئے بنایا گیا ہے۔ باقی اضلاع کے افراد اس ویب پیج پر اپنا شناختی کارڈ درج نہ کریں۔ شکریہ
+                یہ ویب پیج صرف ضلع بونیر کے رہائشی افراد کی سہولت کے لیے بنایا گیا ہے۔ باقی اضلاع کے افراد اپنا CNIC نہ ڈالیں۔ شکریہ
             </div>
 
             <div id="results" class="results-section hidden">
@@ -181,38 +77,28 @@
         </main>
     </div>
 
-    <!-- 🔹 JSON Search Script -->
     <script>
         let allData = [];
 
-        // Load JSON Data
-        fetch('data.json')
+        // Load JSON from same folder
+        fetch('Data.json')
           .then(response => response.json())
           .then(json => {
-              alldata = json;
+              allData = json;
+              console.log("✅ JSON Loaded", allData);
           })
-          .catch(error => {
-              console.error('Error loading JSON:', error);
-          });
+          .catch(error => console.error('❌ JSON Load Error:', error));
 
-        // Search Function
-        document.getElementById('searchForm').addEventListener('submit', function (e) {
+        document.getElementById('searchForm').addEventListener('submit', function(e) {
             e.preventDefault();
-
             const cnicInput = document.getElementById('cnic').value.trim();
             const resultDiv = document.getElementById('results');
             const resultBody = document.getElementById('resultBody');
+            resultBody.innerHTML = '';
 
-            resultBody.innerHTML = ''; // clear old results
+            if (!cnicInput) return alert('براہ کرم اپنا CNIC نمبر درج کریں');
 
-            if (!cnicInput) {
-                alert('براہ کرم اپنا CNIC نمبر درج کریں');
-                return;
-            }
-
-            const result = allData.find(
-                item => item.CNIC.replace(/-/g, '') === cnicInput.replace(/-/g, '')
-            );
+            const result = allData.find(item => item.CNIC.replace(/-/g,'') === cnicInput.replace(/-/g,''));
 
             if (result) {
                 resultDiv.classList.remove('hidden');
@@ -237,5 +123,3 @@
     </script>
 </body>
 </html>
-
-
